--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "my-app",
+	"name": "gbf-damage-calculator",
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
@@ -19,5 +19,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"yarn": "^1.22.21"
+	}
 }
